--- a/app/assets/stylesheets/testing.scss
+++ b/app/assets/stylesheets/testing.scss
@@ -15,6 +15,7 @@
    flex-direction: column;
    padding: 20px;
    border-radius: 10px;
+   height: fit-content;
 }
 .button-container {
    display: flex;
